# daak

./: .gitignore  README.md  pyproject.toml
src/daak/: __init__.py  process.py
tests/: test_proc.py
