[project]
name = "daak"
version = "0.1.2"
description = "Asynchronous subprocess runner"
readme = "README.md"
authors = [
    { name = "Sean Toner", email = "placeoftheway@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
]


[tool.autopep8]
max_line_length = 120
ignore = ["ES01", "W6"]
recursive = true
aggressive = 2
exclude = ".venv/"

[tool.ruff]
select = ["E", "F", "B"]
line-length = 120  # ignore ES01
unfixable = ["B"]  # don't fix bugbear
ignore = ["B008"]